--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,16 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+# set 
 set-option -g status-position top
 
+# start new tmux sessions with index 1
+set -g base-index 1
+
+# set leader to ctrl + s
 set -g prefix C-s
 
+# enable mouse control for resizing panes etc.
 set -g mouse on
 
 bind-key h select-pane -L
@@ -36,4 +42,5 @@ set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '/opt/homebrew/opt/tpm/share/tpm'
+
