--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,20 +1,26 @@
-import = [
-  "~/.config/alacritty/themes/tokyo-night.toml"
-]
-
-[shell]
+[terminal.shell]
 program = "/bin/zsh"
 
 [window]
+dimensions = { columns = 100, lines = 32 }
 padding = {x = 16, y = 14}
 dynamic_padding = true
 decorations = "Full"
 opacity = 0.95
+blur = true
 
 [font]
-normal = {family = "Hack Nerd Font", style = "Regular"}
-size = 14
-offset = {x = 1, y = 3}
+normal = {family = "Hack Nerd Font Mono", style = "Regular"}
+size = 18
+offset = { x = 1, y = 3 }
+builtin_box_drawing = true
 
 [selection]
 save_to_clipboard = true
+
+[general]
+import = [
+  "~/.config/alacritty/themes/tokyo-night.toml"
+]
+
+[terminal]
